# icm20948

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml  release.yml  version_bump.yml
inc/: icm20948_api.h
src/: icm20948.c  icm20948.h
template/: CMakeLists.txt  main.c  main.cpp
